--- a/review/review.html
+++ b/review/review.html
@@ -181,7 +181,7 @@
             <div class="ui-block-a">
                 <label for="text-basic">
                 <div class="ui-alt-icon">
-                    <a href="#" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Reviews</a>
+                    <a onclick="location.href='../payment/productDetails.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Reviews</a>
                     <div class="cart-description">Reviews</div>
                 </div>
                 </label>
