--- a/home.html
+++ b/home.html
@@ -172,7 +172,7 @@
         <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
       </div> 
       <div class="wrapper">
-        <div class="card space grid_one">
+        <div class="card space grid_one" onclick="location.href='resturantView.html'">
           <img class="card-img-top pen horizontal-pen " src="assets/resturant1.jpeg" alt="Card image cap">
           <div class="card-body rechange">
             <p class="card-text"><b>Rose Garden Restaurant</b></p>
@@ -209,7 +209,7 @@
             <li><a href="" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="./qr/index.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
           </ul>
         </div>
       </div> 
