--- a/login/login-form.html
+++ b/login/login-form.html
@@ -109,7 +109,7 @@
                 <img src="LoaderIcon.gif" id="loaderId" />
                 </div>
             </form>
-            <p class="card-text ready">Need an account ? <a class="link" onclick="location.href='registration-form.html'">SIGN IN</a></p>
+            <p class="card-text ready">Need an account ? <a class="link" onclick="location.href='registration-form.html'">SIGN UP</a></p>
             <p class="card-text or">or</p>
             <div class="row">
                 <div class="col">
