--- a/review/review.html
+++ b/review/review.html
@@ -189,6 +189,18 @@
             color: red;
             font-size: 12px;
         }
+        #comment-message {
+            margin-left: 37px;
+            color: #189a18;
+            display: none;
+            width: 268px!important;
+            height: 44px!important;
+        }
+        .alert-success {
+            position: relative!important;
+            top: 0px!important;
+            right: -40px;
+        }
     }
   </style>
   <body>
@@ -237,9 +249,9 @@
                 <div data-role="navbar" >
                 <ul>
                     <li><a href="../home.html" class="ui-btn-active border" target="_self" data-transition="slide"><img src="../assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-                    <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+                    <li><a href="../profile.html" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
                     <li><a href="../cart.html" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-                    <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+                    <li><a href="../qr/index.html" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
                 </ul>
                 </div>
             </div> 
