--- a/payment/cart-payment.html
+++ b/payment/cart-payment.html
@@ -13,14 +13,14 @@
   </head>
   <style>
     .magic {
-      position: relative!important;
-      top: -128px!important;
-      height: 235px!important;
-      border-top-left-radius: 1.2rem!important;
-      border-top-right-radius: 1.2rem!important;
-      background-color: rgba(235, 235, 235, 0.822)!important;
-      width: 374px!important;
-      right: 15px!important;
+        position: relative!important;
+        top: -122px!important;
+        height: 235px!important;
+        border-top-left-radius: 1.2rem!important;
+        border-top-right-radius: 1.2rem!important;
+        background-color: rgba(235, 235, 235, 0.822)!important;
+        width: 374px!important;
+        right: 15px!important;
     }
     .button-login {
       position: relative!important;
@@ -120,15 +120,53 @@
     border-radius: 8%!important;
     }  
     .btn-danger {
-      width: 96%!important;
-      position: relative!important;
-      top: -63px!important;
-      right: 18px!important;
-      color: #fff!important;
-      background-color: #e9200b!important;
-      border-color: #FF7622!important;
-      border-radius: 0%!important;
-      } 
+          width: 100%!important;
+          position: relative!important;
+          top: -78px!important;
+          right: 34px!important;
+          color: #fff!important;
+          background-color: #e9200b!important;
+          border-color: #FF7622!important;
+          border-radius: 0%!important;
+      }
+            @media screen and (orientation:landscape) {
+        .edit-one {
+            position: relative!important;
+            top: 14px!important;
+            right: -267px!important;
+            color: #FF7622!important;
+        }
+        .magic {
+            position: relative!important;
+            top: -120px!important;
+            height: 90px!important;
+            border-top-left-radius: 1.2rem!important;
+            border-top-right-radius: 1.2rem!important;
+            background-color: rgba(235, 235, 235, 0.822)!important;
+            width: 809px!important;
+            right: 15px!important;
+        }
+        .button-login {
+            position: relative!important;
+            right: -448px!important;
+            height: 62px!important;
+            background-color: #FF7622!important;
+            color: #FFFFFF!important;
+            text-shadow: none!important;
+            top: -38px!important;
+            width: 338px!important;
+            border-radius: 12px!important;
+        }
+        .total {
+            position: relative!important;
+            top: 28px!important;
+        }
+        .space {
+            border: none!important;
+            right: -75px!important;
+            top: -48px;
+        }
+      }
   </style>
   <body>
     <div class="p-1">
@@ -141,7 +179,7 @@
                 </div>
               </label>
           </div>
-          <div class="ui-block-b"><div class="ui-bar ui-bar edit-one">EDIT ITEMS</div></div>
+          <div class="ui-block-b"><div class="ui-bar ui-bar edit-one"></div></div>
         </div>
         <br>
         <br>
