--- a/free/non.html
+++ b/free/non.html
@@ -260,6 +260,8 @@
 }
 </style>
 <body>
+
+  
 <div class="js-container container" style="top:0px !important;"></div>
 <div style="text-align:center;margin-top:30px;position:  fixed;width:100%;height:100%;top:0px;left:0px;">
     <div class="checkmark-circle">
@@ -270,8 +272,7 @@
       <div class="progress-bar">
       </div>                       
     </div> 
-
-    <h1>Congratulations! You got <span class="colo">100</span> points</h1>
+    <h1>Congratulations! You got <span class="colo" id="name"></span> points</h1>
     <p>Try our free shop and enjoy</p>
     <button class="submit-btn" type="submit" onclick="location.href='free.html'">Continue</button>
 </div>  
@@ -327,6 +328,10 @@ Confettiful.prototype._renderConfetti = function() {
   }, 25);
 };
 window.confettiful = new Confettiful(document.querySelector('.js-container'));
+
+var x = localStorage.getItem("point");
+let qr = x;
+document.getElementById("name").innerHTML = qr;
 </script>
 
 
