--- a/saveLocation.html
+++ b/saveLocation.html
@@ -250,7 +250,7 @@
         <div class="ui-block-a">
           <div class="ui-bar space border-color right" >
             <div inputmode="button">
-              <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
+              <img src="assets/icons/icon10.png" onclick="history.back()" alt="Back" class="backIcon" />
             </div>
           </div>
         </div>
@@ -299,7 +299,9 @@
         <div class="ui-grid-b">
           <div class="ui-block-a"></div>
           <div class="ui-block-b">
-            <input type="submit" value="SAVE LOCATION" class="submit">
+            <a href="history.back()">
+              <input type="submit" value="SAVE LOCATION" class="submit">
+            </a>
         </div>
       </div>
       </form> 
