--- a/payment/productDetails.html
+++ b/payment/productDetails.html
@@ -301,7 +301,7 @@
             <div class="ui-block-a">
                 <label for="text-basic">
                   <div class="ui-alt-icon">
-                    <a onclick="location.href='../resturantView.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Product Details</a>
+                    <a onclick="history.back()" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Product Details</a>
                     <div class="cart-description">Product Details</div>
                   </div>
                 </label>
