--- a/payment/productDetails.html
+++ b/payment/productDetails.html
@@ -20,7 +20,7 @@
     console.log("lets start using html 5 storage");
     var product1 = {
         'productId': "1",
-        'productImage': "../assets/foods/food3.jpeg",
+        'productImage': "../assets/foods/food9.jpg",
         'productName': "Chicken-Pizza",
         'productCost': "Rs 1500",
         'productRatings': "4.5"
