navigation and changes

--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
         <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">Resturants</div></div>
         <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
       </div> 
-      <div class="card space">
+      <div class="card space" onclick="location.href='restaurantView.html'">
         <img class="card-img-top pen" src="assets/resturant1.jpeg" alt="Card image cap">
         <div class="card-body rechange">
           <p class="card-text"><b>Rose Garden Restaurant</b></p>
