--- a/ratings/rating.html
+++ b/ratings/rating.html
@@ -227,15 +227,15 @@
     <div class="p-1">
         <div class="ui-grid-a">
             <div class="ui-block-a">
-                <label for="text-basic">
-                <div class="ui-alt-icon">
-                  <a href="#" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Reviews</a>
-                    <a onclick="location.href='../payment/productDetails.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Reviews</a>
-                    <div class="cart-description">Reviews</div>
+                <div class="ui-alt-icon" onclick="history.back()">
+                  <a href="" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Reviews</a>
+                  <div class="cart-description">Reviews</div>
                 </div>
                 </label>
             </div>
-            <div><a class='edit' href='#popupLogin' data-rel='popup' data-position-to='window'   data-transition='pop' >ADD COMMENT</a></div>
+            <div class="ui-block-b">
+                <a class='edit' href='#popupLogin' data-rel='popup' data-position-to='window'   data-transition='pop' >ADD COMMENT</a>
+            </div>
             
         </div>
         <br>
