--- a/saveLocation.html
+++ b/saveLocation.html
@@ -298,12 +298,10 @@
 
         <div class="ui-grid-b">
           <div class="ui-block-a"></div>
-          <div class="ui-block-b">
-            <a href="history.back()">
-              <input type="submit" value="SAVE LOCATION" class="submit">
-            </a>
+          <div class="ui-block-b" onclick="history.back()">
+            <input type="submit" value="SAVE LOCATION" class="submit">
+          </div>
         </div>
-      </div>
       </form> 
     </div>
     </div>
